<next version> <kevin@koconnor.net>

  * New syntax for watching memory areas.  The addwatch (and
    addirqwatch / addtracewatch) command is now "addlist GPIOS ..."
    (and "addlist IRQS ..." / "addlist TRACES ...").  The lswatch
    command is now "showvar <var>", the ignorewatch/unignorewatch
    commands are now "ibit <var>" and "wbit <var>".  Finally, the
    "clearwatch" command becomes "clearvar <var>".  Internally, the
    code now uses variables for the various watchlists, which will
    make it easier to add new watchlists in the future.

  * New support for memory tracing based on MMU manipulation.  This
    allows one to watch reads/writes to memory on any ARM platform.
    To use this infrastructure, run "addlist mmutrace <start> <size>
    <rw>".  Where <start> is address to trace, <size> is the size of
    the address range to trace, and <rw> is a string that determines
    whether or not to check for reads or writes.  Use addlist,
    clearvar, and showvar to manipulate the list of address ranges to
    watch.

  * New support in haretconsole for showing architecture register
    names during the "watch" and "wi" commands.

  * New command "evalf".  One can use this to build commands
    dynamically - for example:
      evalf "runscript startup-%s.txt" MACHNAME

  * Status messages can now be written directly to the frame buffer
    during the linux boot (when fbduringboot is enabled).

  * New machine list file (src/mach/machlist.txt) allows one to easily
    define simple machine types.  (More complicated machines can still
    use the existing infrastructure.)

  * Several new machines were added.

20070116 0.4.7 <kevin@koconnor.net>, <pmiscml@gmail.com>

  * Add new machines: rx3715, Axim X50

  * New variable: FBDURINGBOOT

  * DUMP no longer takes a filename parameter.  Use the REDIR command
    instead.  (For example, "DUMP GPIO out.txt" is now "REDIR out.txt
    DUMP GPIO".)

  * Implement new command: IF
